[gd_scene load_steps=11 format=3 uid="uid://bxpviy8dew14x"]

[ext_resource type="Theme" uid="uid://cup2t4417g3ys" path="res://resources/menus.tres" id="1_ax8pc"]
[ext_resource type="Script" path="res://scenes/upgrade_menu.gd" id="2_7pymx"]
[ext_resource type="Texture2D" uid="uid://bw3htvfpjmnxk" path="res://assets/buttons/ice_button.tres" id="2_c0idh"]
[ext_resource type="Script" path="res://scenes/buttons/iceButton.gd" id="4_p8wt5"]
[ext_resource type="Texture2D" uid="uid://cm5skgmledkn5" path="res://assets/buttons/melee_button.tres" id="5_3clpd"]
[ext_resource type="Texture2D" uid="uid://cwccthb6ot2xg" path="res://assets/buttons/lightning_button.tres" id="5_dnhj7"]
[ext_resource type="Script" path="res://scenes/buttons/thunderButton.gd" id="6_wod0v"]
[ext_resource type="Script" path="res://scenes/buttons/meleeButton.gd" id="8_0rw1m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8fdl1"]
bg_color = Color(0.447059, 0.623529, 0.839216, 0.721569)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="LabelSettings" id="LabelSettings_gmi72"]

[node name="upgrade_menu" type="MarginContainer"]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -213.0
offset_top = -179.0
offset_right = 214.0
offset_bottom = 179.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ax8pc")
script = ExtResource("2_7pymx")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_8fdl1")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme = ExtResource("1_ax8pc")
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Level Up!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Choose an attack to upgrade."
label_settings = SubResource("LabelSettings_gmi72")

[node name="iceButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ax8pc")
action_mode = 0
text = "Ice Spear"
icon = ExtResource("2_c0idh")
script = ExtResource("4_p8wt5")

[node name="thunderButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ax8pc")
action_mode = 0
text = "Lightning Shot"
icon = ExtResource("5_dnhj7")
script = ExtResource("6_wod0v")
attack_name = "lightning_bird"

[node name="meleeButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ax8pc")
action_mode = 0
text = "Iron Slash"
icon = ExtResource("5_3clpd")
script = ExtResource("8_0rw1m")
attack_name = "iron_slash"

[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/iceButton" to="PanelContainer/MarginContainer/HBoxContainer/iceButton" method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/thunderButton" to="PanelContainer/MarginContainer/HBoxContainer/thunderButton" method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/meleeButton" to="PanelContainer/MarginContainer/HBoxContainer/meleeButton" method="_on_button_pressed"]
